--- a/xml/lang/hu/network.hu.lang
+++ b/xml/lang/hu/network.hu.lang
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="iso-8859-2" standalone="yes" ?>
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <entries>
 
 <e id="T_LN_undefined_confidence_level"
    EN="undefined confidence level"
-   hu="hiányzó konfidencia szint" />
+   hu="hiĂĄnyzĂł konfidencia szint" />
 
 <e id="T_LN_undefined_type_of_actual_sigma"
    EN="Type of actual sigma is not defined (apriori / aposteriori)"
-   hu="A súlyegység középhiba típusát nem adta meg (apriori / aposteriori)" />
+   hu="A sĂşlyegysĂŠg kĂśzĂŠphiba tĂ­pusĂĄt nem adta meg (apriori / aposteriori)" />
 
 </entries>
