--- a/xml/lang/hu/gama-local.hu.lang
+++ b/xml/lang/hu/gama-local.hu.lang
@@ -1,25 +1,25 @@
-<?xml version="1.0" encoding="iso-8859-2" standalone="yes" ?> 
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?> 
 <entries>
 
 <e id="T_GaMa_Adjustment_of_geodetic_network"   
    EN="Adjustment of local geodetic network"
-   hu="Helyi geodéziai hálózat kiegyenlítés"  /> 
+   hu="Helyi geodĂŠziai hĂĄlĂłzat kiegyenlĂ­tĂŠs"  /> 
 
 <e id="T_GaMa_version"
    EN="version: "
-   hu="verzió: " />
+   hu="verziĂł: " />
 
 <e id="T_GaMa_exception_1"
    EN="Error during creation of InfoSit object"
-   hu="Hiba az InfoSit objektum létrehozása közben"  />
+   hu="Hiba az InfoSit objektum lĂŠtrehozĂĄsa kĂśzben"  />
 
 <e id="T_GaMa_exception_2a"
    EN="GNU Gama - error on reading XML input configuration file!"
-   hu="GNU Gama - hiba az XML input konfigurációs fájl olvasása közben" />
+   hu="GNU Gama - hiba az XML input konfigurĂĄciĂłs fĂĄjl olvasĂĄsa kĂśzben" />
 
 <e id="T_GaMa_exception_2b"
    EN="On line number "
-   hu="A következő sornál " />
+   hu="A kĂśvetkezĹ sornĂĄl " />
 
 <e id="T_GaMa_No_points_available"
    EN="No points available"
@@ -27,11 +27,11 @@
 
 <e id="T_GaMa_No_observations_available"
    EN="No observations available"
-   hu="Nincsenek mérések" />
+   hu="Nincsenek mĂŠrĂŠsek" />
 
 <e id="T_GaMa_No_network_points_defined"
    EN="No network points defined"
-   hu="Nincsenek megadva hálózati pontok" />
+   hu="Nincsenek megadva hĂĄlĂłzati pontok" />
 
 <e id="T_GaMa_No_unknowns_defined"
    EN="No unknowns have been defined"
@@ -39,22 +39,34 @@
 
 <e id="T_GaMa_Observatios_with_outlying_absolute_terms_removed"
    EN="Observations with outlying absolute terms removed"
-   hu="Hibahatáron kívül eső tisztatagú méréseket eltávolítottam" />
+   hu="HibahatĂĄron kĂ­vĂźl esĹ tisztatagĂş mĂŠrĂŠseket eltĂĄvolĂ­tottam" />
 
 <e id="T_GaMa_adjustment_iteration"
    EN=" - adjustment iteration"
-   hu=". - kiegyenlítési iteráció" />
+   hu=". - kiegyenlĂ­tĂŠsi iterĂĄciĂł" />
 
 <e id="T_GaMa_Approximate_coordinates_replaced"
    EN="Approximate coordinates of computed points replaced by adjusted"
-   hu="A számított pontok előzetes koordinátáit a kiegyenlítettekre cseréltem" />
+   hu="A szĂĄmĂ­tott pontok elĹzetes koordinĂĄtĂĄit a kiegyenlĂ­tettekre cserĂŠltem" />
+   
+<e id="T_GaMa_Number_of_linearization_iterations"
+   EN="Number of linearization iterations: " 
+   hu="LinearizĂĄciĂłs iterĂĄciĂłk szĂĄma:" />   
 
 <e id="T_GaMa_solution_ended_with_error"
    EN="GNU Gama - solution ended with error!"
-   hu="GNU Gama - hiba a megoldás közben!" />
+   hu="GNU Gama - hiba a megoldĂĄs kĂśzben!" />
 
 <e id="T_GaMa_internal_program_error"
    EN="GNU Gama - internal program error!"
-   hu="GNU Gama - belső programhiba!" />
+   hu="GNU Gama - belsĹ programhiba!" />
+   
+<e id="T_GaMa_network_not_connected"
+   EN="Warning: network is not connected" 
+   hu="FigyelmeztetĂŠs: a hĂĄlĂłzat nem ĂśsszefĂźggĹ" /> 
+   
+<e id="T_GaMa_linearization"
+   EN="Linearization"
+   hu="LinearizĂĄciĂł" />     
   
 </entries>   
