--- a/xml/lang/hu/review.hu.lang
+++ b/xml/lang/hu/review.hu.lang
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="iso-8859-2" standalone="yes" ?>
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <entries>
 
 <e id="T_GaMa_inconsistent_coordinates_and_angles"
    EN="Inconsistent coordinates and angles: \ninternally changing sign of all Y coordinates"
-   hu="Inkonzisztens koordináták és szögek: minden Y koordináta előjelét megváltoztattam" />
+   hu="Inkonzisztens koordinĂĄtĂĄk ĂŠs szĂśgek: minden Y koordinĂĄta elĹjelĂŠt megvĂĄltoztattam" />
 
 <e id="T_GaMa_point"
    EN="point"
@@ -11,143 +11,143 @@
 
 <e id="T_GaMa_standpoint"
    EN="standpoint"
-   hu="álláspont" />
+   hu="ĂĄllĂĄspont" />
 
 <e id="T_GaMa_target"
    EN="target"
-   hu="irányzott pont" />
+   hu="irĂĄnyzott pont" />
 
 <e id="T_GaMa_network_description"
    EN="Network description"
-   hu="Hálózat leírás" />
+   hu="HĂĄlĂłzat leĂ­rĂĄs" />
 
 <e id="T_GaMa_General_solution_parameters"
    EN="General parameters of the adjustment"
-   hu="A kiegyenlítés általános jellemzői" />
+   hu="A kiegyenlĂ­tĂŠs ĂĄltalĂĄnos jellemzĹi" />
 
 <e id="T_GaMa_gpar1_coordinates"
    EN="Coordinates"
-   hu="Koordináták" />
+   hu="KoordinĂĄtĂĄk" />
 
 <e id="T_GaMa_gpar1_adjusted_coordinates"
    EN="Adjusted"
-   hu="Kiegyenlített" />
+   hu="KiegyenlĂ­tett" />
 
 <e id="T_GaMa_gpar1_constrained_coordinates"
    EN="Constrained  * "
-   hu="Kényszerített * " />
+   hu="KĂŠnyszerĂ­tett * " />
 
 <e id="T_GaMa_gpar1_fixed_coordinates"
    EN="Fixed"
-   hu="Rögzített" />
+   hu="RĂśgzĂ­tett" />
 
 <e id="T_GaMa_gpar1_total"
    EN="Total"
-   hu="Összesen" />
+   hu="Ăsszesen" />
 
 <e id="T_GaMa_gpar1_computed_points"
    EN="Total of adjusted points"
-   hu="Kiegyenlített pontok" />
+   hu="KiegyenlĂ­tett pontok" />
 
 <e id="T_GaMa_gpar2_constrained_points"
    EN="Constrained points"
-   hu="Kényszerített pontok" />
+   hu="KĂŠnyszerĂ­tett pontok" />
 
 <e id="T_GaMa_gpar1_fixed_points"
    EN="Number of fixed points"
-   hu="Rögzített pontok" />
+   hu="RĂśgzĂ­tett pontok" />
 
 <e id="T_GaMa_gpar1_computed_heights"
    EN="Number of computed heights"
-   hu="Számított magasságok" />
+   hu="SzĂĄmĂ­tott magassĂĄgok" />
 
 <e id="T_GaMa_gpar2_constrained_heights"
    EN="Constrained heights"
-   hu="Kényszerített magasságok" />
+   hu="KĂŠnyszerĂ­tett magassĂĄgok" />
 
 <e id="T_GaMa_gpar1_fixed_heights"
    EN="Number of fixed heights"
-   hu="Rögzített magasságok" />
+   hu="RĂśgzĂ­tett magassĂĄgok" />
 
 <e id="T_GaMa_gpar1_points_total"
    EN="Total of points"
-   hu="Összes pont" />
+   hu="Ăsszes pont" />
 
 <e id="T_GaMa_gpar1_directions"
    EN="Number of directions"
-   hu="Irányok száma" />
+   hu="IrĂĄnyok szĂĄma" />
 
 <e id="T_GaMa_gpar2_bearings"
    EN="Number of bearings"
-   hu="Tájékozások száma" />
+   hu="TĂĄjĂŠkozĂĄsok szĂĄma" />
 
 <e id="T_GaMa_gpar1_angles"
    EN="Number of angles"
-   hu="Szögek száma" />
+   hu="SzĂśgek szĂĄma" />
 
 <e id="T_GaMa_gpar1_distances"
    EN="Number of distances"
-   hu="Távolságok száma" />
+   hu="TĂĄvolsĂĄgok szĂĄma" />
 
 <e id="T_GaMa_gpar1_observed_coords"
    EN="Coordinates"
-   hu="Koordináták" />
+   hu="KoordinĂĄtĂĄk" />
 
 <e id="T_GaMa_gpar1_leveling_diffs"
    EN="Leveling differences"
-   hu="Magasságkülönbségek" />
+   hu="MagassĂĄgkĂźlĂśnbsĂŠgek" />
 
 <e id="T_GaMa_gpar1_z_angles"
    EN="Zenith angles"
-   hu="Zenitszögek" />
+   hu="ZenitszĂśgek" />
 
 <e id="T_GaMa_gpar1_s_dists"
    EN="Slope distances"
-   hu="Ferde távolságok" />
+   hu="Ferde tĂĄvolsĂĄgok" />
 
 <e id="T_GaMa_gpar1_obs_total"
    EN="Total of observations"
-   hu="Összes mérés" />
+   hu="Ăsszes mĂŠrĂŠs" />
 
 <e id="T_GaMa_gpar1_equations"
    EN="Number of project equations"
-   hu="Egyenletek száma" />
+   hu="Egyenletek szĂĄma" />
 
 <e id="T_GaMa_gpar2_number_of_unknowns"
    EN="Number of unknowns"
-   hu="Ismeretlenek száma" />
+   hu="Ismeretlenek szĂĄma" />
 
 <e id="T_GaMa_gpar1_redundancy"
    EN="Degrees of freedom"
-   hu="Szabadságfok" />
+   hu="SzabadsĂĄgfok" />
 
 <e id="T_GaMa_gpar2_network_defect"
    EN="Network defect"
-   hu="Hálózati defektus" />
+   hu="HĂĄlĂłzati defektus" />
 
 <e id="T_GaMa_not_enough_constrained_points"
    EN="Not enough constrained points defined"
-   hu="Nincs elég kényszerített pont" />
+   hu="Nincs elĂŠg kĂŠnyszerĂ­tett pont" />
 
 <e id="T_GaMa_Free_network"
    EN="Free network"
-   hu="Szabad hálózat" />
+   hu="Szabad hĂĄlĂłzat" />
 
 <e id="T_GaMa_Free_network_defect_is"
    EN="Free network defect is "
-   hu="Szabad hálózati defektus " />
+   hu="Szabad hĂĄlĂłzati defektus " />
 
 <e id="T_GaMa_Given_network_configuration_can_not_be_adjusted"
    EN="Given network configuration can not be adjusted"
-   hu="A megadott hálózat nem egyenlíthető ki" />
+   hu="A megadott hĂĄlĂłzat nem egyenlĂ­thetĹ ki" />
 
 <e id="T_GaMa_detected_singular_variables"
    EN="The following unknowns have been detected as linearly dependent"
-   hu="A követhező ismeretleneket linárisan függőként azonosítottam" />
+   hu="A kĂśvethezĹ ismeretleneket linĂĄrisan fĂźggĹkĂŠnt azonosĂ­tottam" />
 
 <e id="T_GaMa_index_type_point"
    EN="  index type point"
-   hu="  index típusú pont" />
+   hu="  index tĂ­pusĂş pont" />
 
 <e id="T_GaMa_m0_apriori"
    EN="m0  apriori    "
@@ -159,15 +159,15 @@
 
 <e id="T_GaMa_During_statistical_analysis_we_work"
    EN="During statistical analysis we work"
-   hu="Statisztikai analízis során használt értékek" />
+   hu="Statisztikai analĂ­zis sorĂĄn hasznĂĄlt ĂŠrtĂŠkek" />
 
 <e id="T_GaMa_statan_with_empirical_standard_deviation"
    EN="- with aposteriori standard deviation "
-   hu="- aposteriori középhiba " />
+   hu="- aposteriori kĂśzĂŠphiba " />
 
 <e id="T_GaMa_statan_with_apriori_standard_deviation"
    EN="- with apriori standard deviation "
-   hu="- apriori középhiba " />
+   hu="- apriori kĂśzĂŠphiba " />
 
 <e id="T_GaMa_statan_with_confidence_level"
    EN="- with confidence level "
@@ -175,7 +175,7 @@
 
 <e id="T_GaMa_Ratio_empirical_to_apriori"
    EN="Ratio m0\' aposteriori / m0 apriori: "
-   hu="m0' aposteriori / m0 apriori hányados: " />
+   hu="m0' aposteriori / m0 apriori hĂĄnyados: " />
 
 <e id="T_GaMa_interval"
    EN="interval"
@@ -183,51 +183,51 @@
 
 <e id="T_GaMa_interval_contains"
    EN="contains value m0\'/m0"
-   hu="tartalmazza az m0\'/m0 értéket" />
+   hu="tartalmazza az m0\'/m0 ĂŠrtĂŠket" />
 
 <e id="T_GaMa_interval_doesnt_contain"
    EN="does not contain value m0\'/m0"
-   hu="nem tartalmazza az m0\'/m0 értéket" />
+   hu="nem tartalmazza az m0\'/m0 ĂŠrtĂŠket" />
 
 <e id="T_GaMa_m0_distances"
    EN="m0\'/m0 (distances): "
-   hu="m0\'/m0 (távolság): " />
+   hu="m0\'/m0 (tĂĄvolsĂĄg): " />
 
 <e id="T_GaMa_m0_directions"
    EN="m0\'/m0 (directions): "
-   hu="m0\'/m0 (irány): " />
+   hu="m0\'/m0 (irĂĄny): " />
 
 <e id="T_GaMa_m0_angles"
    EN="m0\'/m0 (angles): "
-   hu="m0\'/m0 (szög): " />
+   hu="m0\'/m0 (szĂśg): " />
 
 <e id="T_GaMa_m0_dirs_angs"
    EN="m0\'/m0 (directions/angles): "
-   hu="m0\'/m0 (irány/szög): " />
+   hu="m0\'/m0 (irĂĄny/szĂśg): " />
 
 <e id="T_GaMa_Maximal_decrease_of_m0"
    EN="Maximal decrease of m0\'\'/m0 on elimination of one observation: "
-   hu="Egy mérés elhagyásával elérhető maximális csökkenés az m0\'\'/m0 értékben: " />
+   hu="Egy mĂŠrĂŠs elhagyĂĄsĂĄval elĂŠrhetĹ maximĂĄlis csĂśkkenĂŠs az m0\'\'/m0 ĂŠrtĂŠkben: " />
 
 <e id="T_GaMa_Maximal_normalized_residual"
    EN="Maximal normalized residual "
-   hu="Maximális normalizált javítás " />
+   hu="MaximĂĄlis normalizĂĄlt javĂ­tĂĄs " />
 
 <e id="T_GaMa_genpar_Maximal_studentized_residual"
    EN="Maximal studentized residual "
-   hu="Maximális studentizált javítás " />
+   hu="MaximĂĄlis studentizĂĄlt javĂ­tĂĄs " />
 
 <e id="T_GaMa_genpar_exceeds"
    EN=" exceeds"
-   hu=" eléri" />
+   hu=" elĂŠri" />
 
 <e id="T_GaMa_genpar_doesnt_exceed"
    EN=" does not exceed"
-   hu=" nem éri el" />
+   hu=" nem ĂŠri el" />
 
 <e id="T_GaMa_genpar_critical_value"
    EN=" critical value "
-   hu=" a kritikus értéket " />
+   hu=" a kritikus ĂŠrtĂŠket " />
 
 <e id="T_GaMa_genpar_on_significance_level"
    EN="on significance level "
@@ -235,11 +235,11 @@
 
 <e id="T_GaMa_genpar_for_observation_ind"
    EN=" % for observation #"
-   hu=" % észlelés: #" />
+   hu=" % ĂŠszlelĂŠs: #" />
 
 <e id="T_GaMa_Review_of_fixed_points"
    EN="Fixed points"
-   hu="Rögzített pontok" />
+   hu="RĂśgzĂ­tett pontok" />
 
 <e id="T_GaMa_point"
    EN="point"
@@ -247,11 +247,11 @@
 
 <e id="T_GaMa_adjunk_Review_of_unknowns_coordidantes"
    EN="Adjusted coordinates"
-   hu="Kiegyenlített koordináták" />
+   hu="KiegyenlĂ­tett koordinĂĄtĂĄk" />
 
 <e id="T_GaMa_adjunk_mean_position_error_maximal"
    EN="Maximal mean position error is "
-   hu="Maximális helyzeti középhiba " />
+   hu="MaximĂĄlis helyzeti kĂśzĂŠphiba " />
 
 <e id="T_GaMa_adjunk_mean_position_error_on_point"
    EN=" mm on point "
@@ -259,76 +259,79 @@
 
 <e id="T_GaMa_adjunk_mean_position_error_average"
    EN="Average mean position error is "
-   hu="Átlagos helyzeti középhiba " />
+   hu="Ătlagos helyzeti kĂśzĂŠphiba " />
 
 <e id="T_GaMa_adjunk_header1"
    EN="    approximate  correction  adjusted    std.dev conf.i.\n"
-   hu="     előzetes     javítás     kiegy.     középh. konf.i.\n" />
+   hu="     elĹzetes     javĂ­tĂĄs     kiegy.     kĂśzĂŠph. konf.i.\n" />
 
 <e id="T_GaMa_adjunk_header2"
    EN="====== value ====== [m] ====== value ========== [mm] ===\n\n"
-   hu="====== érték ====== [m] ====== érték ========== [mm] ===\n\n" />
+   hu="====== ĂŠrtĂŠk ====== [m] ====== ĂŠrtĂŠk ========== [mm] ===\n\n" />
 
 <e id="T_GaMa_adjunk_constrained"
    EN="constrained"
-   hu="kényszerített" />
+   hu="kĂŠnyszerĂ­tett" />
 
 <e id="T_GaMa_adjunk_Review_of_unknowns_bearings"
    EN="Adjusted orientation unknowns"
-   hu="Kiegyenlített tájékozási ismeretlenek" />
+   hu="KiegyenlĂ­tett tĂĄjĂŠkozĂĄsi ismeretlenek" />
 
 <e id="T_GaMa_adjunk_header3"
    EN="   approximate  correction  adjusted   std.dev conf.i.\n"
-   hu="    előzetes     javítás     kiegy.    középh. konf.i.\n" />
+   hu="    elĹzetes     javĂ­tĂĄs     kiegy.    kĂśzĂŠph. konf.i.\n" />
 
 <e id="T_GaMa_adjunk_header4"
    EN="==== value [g] ==== [g] === value [g] ======= [cc] ===\n\n"
-   hu="==== érték [g] ==== [g] === érték [g] ======= [cc] ===\n\n" />
+   hu="==== ĂŠrtĂŠk [g] ==== [g] === ĂŠrtĂŠk [g] ======= [cc] ===\n\n" />
 
 <e id="T_GaMa_adjunk_Review_of_unknowns_heights"
    EN="Adjusted heights"
-   hu="Kiegyenlített magasságok" />
+   hu="KiegyenlĂ­tett magassĂĄgok" />
 
 <e id="T_GaMa_adjunk_header5"
    EN="     approximate  correction  adjusted    std.dev conf.i.\n"
-   hu="      előzetes     javítás     kiegy.     középh. konf.i.\n" />
+   hu="      elĹzetes     javĂ­tĂĄs     kiegy.     kĂśzĂŠph. konf.i.\n" />
 
 <e id="T_GaMa_adjunk_header6"
    EN="======= value ====== [m] ====== value ========== [mm] ===\n\n"
-   hu="======= érték======= [m] ====== érték ========== [mm] ===\n\n" />
+   hu="======= ĂŠrtĂŠk======= [m] ====== ĂŠrtĂŠk ========== [mm] ===\n\n" />
 
 <e id="T_GaMa_tstlin_header_value"
    EN="======= value "
-   hu="======= érték " />
+   hu="======= ĂŠrtĂŠk " />
 
 <e id="T_GaMa_tstlin_Test_of_linearization_error"
    EN="Test of linearization error"
-   hu="Linearizálási hiba vizsgálata" />
+   hu="LinearizĂĄlĂĄsi hiba vizsgĂĄlata" />
 
 <e id="T_GaMa_tstlin_Differences"
    EN="Diffs in adj. observations from residuals and from adjusted coordinates"
-   hu="Eltérések a kiegyenlített mérések és a kiegyenlített koordinátákból számítható értékek között"
+   hu="EltĂŠrĂŠsek a kiegyenlĂ­tett mĂŠrĂŠsek ĂŠs a kiegyenlĂ­tett koordinĂĄtĂĄkbĂłl szĂĄmĂ­thatĂł ĂŠrtĂŠkek kĂśzĂśtt"
    />
 
 <e id="T_GaMa_tstlin_obs_r_diff"
    EN="      observed     v        difference"
-   hu="        mért       v           eltérés" />
+   hu="        mĂŠrt       v           eltĂŠrĂŠs" />
 
 <e id="T_GaMa_tstlin_header1"
    EN="====== value == [mm|cc] == [cc] == [mm] =\n\n"
-   hu="====== érték == [mm|cc] == [cc] == [mm] =\n\n" />
+   hu="====== ĂŠrtĂŠk == [mm|cc] == [cc] == [mm] =\n\n" />
+<e id="T_GaMa_padding_obs"
+   EN="       "
+   hu="       " />
 
 <e id="T_GaMa_distance"
    EN=" dist. "
-   hu="  táv. " />
+   hu="  tĂĄv. " />
 
 <e id="T_GaMa_direction"
    EN=" dir.  "
-   hu=" irány " />
+   hu=" irĂĄny " />
 
 <e id="T_GaMa_angle"
    EN=" angle "
-   hu="  szög " />
+   hu="  szĂśg " />
 
 <e id="T_GaMa_s_distance"
    EN=" slope "
@@ -352,7 +355,7 @@
 
 <e id="T_GaMa_levell"
    EN=" h dif "
-   hu=" m.kül " />
+   hu=" m.kĂźl " />
 
 <e id="T_GaMa_xdiff"
    EN=" x dif "
@@ -365,14 +368,17 @@
 <e id="T_GaMa_zdiff"
    EN=" z dif "
    hu=" z elt " />
+<e id="T_GaMa_azimuth"
+   EN=" azim. "
+   hu=" azim. " />
 
 <e id="T_GaMa_errell_review_of_mean_errors_and_error_ellipses"
    EN="Mean errors and parameters of error ellipses"
-   hu="Középhibák és hibaellipszisek paraméterei" />
+   hu="KĂśzĂŠphibĂĄk ĂŠs hibaellipszisek paramĂŠterei" />
 
 <e id="T_GaMa_errell_header1"
    EN="    mp      mxy      mean error ellipse  conf.err. ellipse   g\n"
-   hu="    mP      mXY     középhiba ellipszis konf.hiba ellipszis  g\n" />
+   hu="    mP      mXY     kĂśzĂŠphiba ellipszis konf.hiba ellipszis  g\n" />
 
 <e id="T_GaMa_errell_header2"
    EN="== [mm] == [mm] ==== a [mm] b  alpha[g] ==== a' [mm] b' ========"
@@ -380,35 +386,35 @@
 
 <e id="T_GaMa_adjobs_Adjusted_observations"
    EN="Adjusted observations"
-   hu="Kiegyenlített mérések" />
+   hu="KiegyenlĂ­tett mĂŠrĂŠsek" />
 
 <e id="T_GaMa_adjobs_observed"
    EN="observed"
-   hu="mért" />
+   hu="mĂŠrt" />
 
 <e id="T_GaMa_adjobs_adjusted"
    EN="adjusted"
-   hu="kiegyenlített" />
+   hu="kiegyenlĂ­tett" />
 
 <e id="T_GaMa_adjobs_header1"
    EN=" std.dev conf.i.\n"
-   hu=" középh. konf.i.\n" />
+   hu=" kĂśzĂŠph. konf.i.\n" />
 
 <e id="T_GaMa_adjobs_value"
    EN="== value "
-   hu="== érték " />
+   hu="== ĂŠrtĂŠk " />
 
 <e id="T_GaMa_resobs_Review_of_residuals_analysis_obs"
    EN="Residuals and analysis of observations"
-   hu="Javítások és mérések elemzése" />
+   hu="JavĂ­tĂĄsok ĂŠs mĂŠrĂŠsek elemzĂŠse" />
 
 <e id="T_GaMa_resobs_Outlying_observations"
    EN="Outlying observations"
-   hu="Hibahatáron kívül eső mérések" />
+   hu="HibahatĂĄron kĂ­vĂźl esĹ mĂŠrĂŠsek" />
 
 <e id="T_GaMa_resobs_header1"
    EN="        f[%]        v    |v'|     e-obs.  e-adj.\n"
-   hu="        f[%]        v    |v'|     e-ész.  e-kie.\n" />
+   hu="        f[%]        v    |v'|     e-ĂŠsz.  e-kie.\n" />
 
 <!-- removed in 1.7.09 : e id="T_GaMa_resobs_header2"
    EN="======== [mm|cc] =========== [mm|cc] ===\n\n"
@@ -436,44 +442,44 @@
 
 <e id="T_GaMa_resobs_normality_test"
    EN="Test of normality of homogenized residuals"
-   hu="Homogenizált javítások normalitás vizsgálata" />
+   hu="HomogenizĂĄlt javĂ­tĂĄsok normalitĂĄs vizsgĂĄlata" />
 
 <e id="T_GaMa_resobs_condition_number"
    EN="Condition number        : "
-   hu="Feltételek száma        : " />
+   hu="FeltĂŠtelek szĂĄma        : " />
 
 <e id="T_GaMa_reduced_Review_of_reduced_observations"
-   en="Reduced observations"
-   hu="Redukált mérések" />
+   EN="Reduced observations"
+   hu="RedukĂĄlt mĂŠrĂŠsek" />
 
 <e id="T_GaMa_reduced_observed"
-   en="observed"
-   hu="mért" />
+   EN="observed"
+   hu="mĂŠrt" />
 
 <e id="T_GaMa_reduced_reduced"
-   en="reduced"
-   hu="redukált" />
+   EN="reduced"
+   hu="redukĂĄlt" />
 
 <e id="T_GaMa_reduced_header1"
-   en="  diff dh\n"
-   hu="  mag.kül\n" />
+   EN="  diff dh\n"
+   hu="  mag.kĂźl\n" />
 
 <e id="T_GaMa_reduced_value"
-   en="== value "
-   hu="== érték " />
+   EN="== value "
+   hu="== ĂŠrtĂŠk " />
 
 
 <e id="T_GaMa_approx_Review_of_approximate_coordinates"
    EN="Approximate coordinates"
-   hu="Előzetes koordináták" />
+   hu="ElĹzetes koordinĂĄtĂĄk" />
 
 <e id="T_GaMa_approx_observations"
    EN="observations: "
-   hu="mérések     : " />
+   hu="mĂŠrĂŠsek     : " />
 
 <e id="T_GaMa_approx_header1"
    EN="coordinates   "
-   hu="koordináták   " />
+   hu="koordinĂĄtĂĄk   " />
 
 <e id="T_GaMa_approx_given_coordinates"
    EN="given       : "
@@ -481,11 +487,11 @@
 
 <e id="T_GaMa_approx_computed_coordinates"
    EN="computed    : "
-   hu="számított   : " />
+   hu="szĂĄmĂ­tott   : " />
 
 <e id="T_GaMa_approx_total"
    EN="total       : "
-   hu="összesen    : " />
+   hu="Ăśsszesen    : " />
 
 <e id="T_GaMa_approx_separator"
    EN="---------------------------------------------"
@@ -493,18 +499,26 @@
 
 <e id="T_GaMa_missing_coordinates"
    EN="Missing coordinates"
-   hu="Hiányzó koordináták" />
+   hu="HiĂĄnyzĂł koordinĂĄtĂĄk" />
 
 <e id="T_GaMa_abstrm_Review_of_outlying_abs_terms"
    EN="Outlying absolute terms in project equations"
-   hu="Hibahatárnál nagyobb tisztatagok az egyenletekben" />
+   hu="HibahatĂĄrnĂĄl nagyobb tisztatagok az egyenletekben" />
 
 <e id="T_GaMa_abstrm_header1"
    EN="           observed     absolute\n"
-   hu="             mért       abszolút\n" />
+   hu="             mĂŠrt       abszolĂşt\n" />
 
 <e id="T_GaMa_abstrm_header2"
    EN="== value ===== term ==\n\n"
-   hu="== érték ===== ttag ==\n\n" />
+   hu="== ĂŠrtĂŠk ===== ttag ==\n\n" />
+
+<e id="T_GaMa_reduced_Review_of_reduced_observations_to_ellipsoid"
+   EN="Reduced observations to ellipsoid"
+   hu="Ellipszoidra redukĂĄlt mĂŠrĂŠsi eredmĂŠnyek" />
+
+<e id="T_GaMa_reduced_to_ellipsoid_header1"
+   EN="  diff\n"
+   hu="  elt\n" />
 
 </entries>
