Change encoding to utf-8 in all English language files Some English languages files were declared to be in iso-8859-2

--- a/xml/lang/en/network.lang
+++ b/xml/lang/en/network.lang
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-2" standalone="yes" ?>
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <entries>
 
 <e id="T_LN_undefined_confidence_level"
