--- a/xml/lang/en/gamalib.lang
+++ b/xml/lang/en/gamalib.lang
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-2" standalone="yes" ?> 
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <entries>
 
 <!--
@@ -9,7 +9,7 @@
    ./gamalib/local/rmpoints.lang
    ./gamalib/local/network.lang
    ./gamaprog/linux/gama-local/gama-local.lang
--->     
+-->
 
 <e id="T_IE_internal_error"
    en="internal error" />
@@ -17,10 +17,4 @@
 <e id="T_GaMa_from_equals_to"
    en="station and target are identical" />
 
-</entries>   
-
-
-
-
-
-
+</entries>
