--- a/xml/lang/en/pobs.lang
+++ b/xml/lang/en/pobs.lang
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="iso-8859-2" standalone="yes" ?> 
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <entries>
 
 <e id="T_POBS_computation_of_bearing_for_identical_points"
