Fix typo in AUTHORS and doc/gama.texi

--- a/doc/gama.texi
+++ b/doc/gama.texi
@@ -172,7 +172,7 @@ classes for combinatorial solution of medians of approximate
 coordinates.
 
 Friedhelm Krumm, Geodätisches Institut Universität Stuttgart,
-contributed mumerical examples for the adjustment of geodetic networks
+contributed numerical examples for the adjustment of geodetic networks
 (1D, 2D and 3D) published in his Geodetic Network Adjustment Examples,
 Rev. 3.5, January 20, 2020.  https://www.gis.uni-stuttgart.de/
 @c
